--- a/src/components/ListStatus/listStatus.sass
+++ b/src/components/ListStatus/listStatus.sass
@@ -3,7 +3,7 @@
     justify-content: center
     align-items: center
     min-height: 100vh
-    padding: 0
+    padding: 0 0 80px 0
     &__wrapper
         min-width: 400px
         max-width: 1180px
