--- a/src/components/ListStatus/listStatus.sass
+++ b/src/components/ListStatus/listStatus.sass
@@ -8,14 +8,14 @@
         min-width: 400px
         max-width: 1180px
     &__head
-        color: #000000       
+        color: #000000
     &__table
         display: flex
         flex-direction: column
         border: 1px solid #efefefaf
         border-radius: 5px
         font-size: 14px
-        box-shadow: 4px 4px  10px 0px #000
+        box-shadow: 4px 4px 10px 0px #000
     &__title
         text-align: center
         font-size: 24px
@@ -24,15 +24,29 @@
     &__btn
         width: 50%
         font-weight: 700
+        &_small
+            padding: 0
+            width: 200px
+        &:first-child
+            margin-bottom: 10px
     &__wrapper-management
         display: flex
         flex-direction: column
-.btn
-    &_small
-        padding: 0
-        width: 200px
-        &:first-child
-            margin-bottom: 10px
+    &__empty
+        text-align: center
+        font-size: 18px
+        font-weight: 800
+    &__modal
+        display: none
+        position: absolute
+        width: 100%
+        height: 100%
+        left: 0%
+        top: 0%
+        background: rgba(0,0,0, 0.5)
+        
+.active
+    display: block
 
 th
     text-align: center
