--- a/src/components/Modal/Modal.sass
+++ b/src/components/Modal/Modal.sass
@@ -10,6 +10,7 @@
     height: 462px
     box-shadow: 4px 4px 10px 0px #000
     padding: 0 0 20px
+    overflow: hidden
     &__input-wrapper
         display: flex
         flex-direction: column
