--- a/src/components/pages/ListStatus/listStatus.sass
+++ b/src/components/pages/ListStatus/listStatus.sass
@@ -9,6 +9,46 @@
         max-width: 1180px
     &__head
         color: #000000
+    &__sort-wrapper
+        display: flex
+    &__sort-type
+        display: flex
+        justify-content: center
+        align-items: center
+        font-size: 16px
+        font-weight: 600
+        margin-right: 5px
+    &__container
+        display: flex
+        position: relative
+        justify-content: center
+        align-items: end
+        flex-direction: column
+        margin-bottom: 10px
+        svg
+            fill: var(--bs-yellow)
+            cursor: pointer
+            transition-duration: 0.6s
+            &:hover
+                fill: var(--bs-danger)
+    &__popup
+        position: absolute
+        right: 0
+        top: 130%
+        border-radius: 10px
+        background: #ffffff
+        box-shadow: 4px 4px 10px 0px #000
+        max-width: 200px
+        list-style: none
+        overflow: hidden
+        padding: 0
+        li
+            padding: 10px
+            font-weight: 600
+            cursor: pointer
+            transition-duration: 0.3s
+            &:hover
+                background: var(--bs-danger)
     &__table
         display: flex
         flex-direction: column
